--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,12 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.action-sheet-group, .alert-message {overflow: auto;}
+$lt-gray: #ddd;
+$background-dark: #512DA8;
+$background-light: #9575CD;
+$background-pale: #D1C4E9;
+
+.background-pale {
+    background-color: $background-pale
+}
